@@ -3,7 +3,9 @@
 		- Reduce round trip time for single request(2014-04-04)
 		- Add zcount, zsum, zavg, zRemRangeByScore, zRemRangeByRank commands(2014-04-06)
 		- Update redis-import.php to use Redis SCAN command if available(2014-04-07)
+		- qpush/qpush_* accept multiple values(2014-04-13)
 	* Incompatible changes:
+		- qpush returns the length of the queue/list after the push operations(2014-04-10)
 	* Bug fixes:
 		- Redesign network flow, support very large batch commands
 		- Fix bug on ssdb-dump that lose data, print out error message(2014-04-05)
